Fix Modal Text Alignment

--- a/src/components/View/Results Releasing/LabOfficer.css
+++ b/src/components/View/Results Releasing/LabOfficer.css
@@ -190,7 +190,6 @@
 
   .custom-modal {
     margin: auto;
-    text-align: center;
     background-color: white;
   }
 
